Column size changes
Made the columns default to a smaller width on the normal layout but enabled the columns to

--- a/app/javascript/flavours/aether/styles/about.scss
+++ b/app/javascript/flavours/aether/styles/about.scss
@@ -344,12 +344,12 @@ $fluid-breakpoint: $maximum-width + 20px;
 @media screen and (min-width: $widescreen-breakpoint) {
   .layout-single-column {
     .about__left-column {
-      max-width: 700px;
+      max-width: var(--ui-main-column-width);
       display: block;
     }
 
     .about__right-column {
-      max-width: 450px;
+      max-width: var(--ui-secondary-profile-column-width);
     }
 
     .about {
