--- a/app/javascript/flavours/aether/styles/containers.scss
+++ b/app/javascript/flavours/aether/styles/containers.scss
@@ -1,5 +1,5 @@
 .container-alt {
-  width: 700px;
+  width: var(--ui-main-column-width);
   margin: 0 auto;
 
   @media screen and (width <= 740px) {
