--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -324,7 +324,7 @@ $ui-header-height: 55px;
   .wide .columns-area:not(.columns-area--mobile) & {
     flex: auto;
     min-width: 330px;
-    max-width: 700px;
+    max-width: var(--ui-main-column-width);
   }
 }
 
