--- a/app/javascript/flavours/aether/styles/components/tenor.scss
+++ b/app/javascript/flavours/aether/styles/components/tenor.scss
@@ -32,7 +32,10 @@
 
 .react-tenor--search {
   box-sizing: border-box;
-  color: #555;
+  color: var(--ui-font-bright-color);
+  background: transparent;
+  border: 0;
+  border-bottom: 2px solid var(--ui-font-bright-color);
   font-size: 1.5em;
   margin-bottom: 10px;
   line-height: 1.3;
@@ -40,17 +43,24 @@
   padding: 10px;
   width: 100%;
   -webkit-appearance: none;
+  transition:
+    color 0.2s,
+    border-color 0.2s;
+
+  &:focus,
+  &:active {
+    color: var(--ui-font-color);
+    border-color: var(--ui-font-color);
+    outline: none;
+  }
 }
 
 .react-tenor--search[type='search']::-webkit-search-cancel-button,
 .react-tenor--search[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
   appearance: none;
-}
-
-.react-tenor--search:focus {
-  box-shadow: 0 0 2px 2px #6a89af;
-  outline: none;
+  color: var(--ui-font-bright-color);
+  border-color: var(--ui-font-bright-color);
 }
 
 .react-tenor--autocomplete {
@@ -115,7 +125,34 @@
 
 .react-tenor--page-left,
 .react-tenor--page-right {
-  display: none;
+  width: 40px;
+  height: 40px;
+  border: 3px solid var(--ui-highlight-color);
+  border-radius: 100%;
+  color: var(--ui-highlight-color);
+  font-size: 1.5rem;
+  -webkit-text-stroke: 1px var(--ui-highlight-color);
+  transition:
+    color 0.2s,
+    -webkit-text-stroke 0.2s,
+    background 0.2s,
+    border-color 0.2s;
+  background: transparent;
+  margin: 10px auto;
+
+  &:hover {
+    color: var(--ui-font-color);
+    -webkit-text-stroke: 1px var(--ui-font-color);
+    border-color: var(--ui-font-color);
+  }
+}
+
+.react-tenor--page-left::after {
+  content: '←';
+}
+
+.react-tenor--page-right::after {
+  content: '→';
 }
 
 @keyframes react-tenor-fade-in {
