Remove inverted colors from compose

--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -126,9 +126,8 @@
 
       &:hover {
         background: var(--ui-highlight-color);
-        color: var(--ui-font-color);
+        color: var(--ui-highlight-button-text-color);
         text-decoration: none;
-        border-color: white;
       }
     }
 
