--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -136,6 +136,7 @@
       opacity: 0.5;
       color: var(--ui-font-dimmer-color);
       border-color: var(--ui-font-dimmer-color);
+      border-width: 1px;
     }
   }
 
