Style active elements and tidy up

--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -34,4 +34,12 @@
       color: var(--ui-highlight-button-text-color);
     }
   }
+
+  .active {
+    color: var(--ui-highlight-color);
+
+    &:hover {
+      color: var(--ui-font-color);
+    }
+  }
 }
