--- a/app/javascript/flavours/aether/styles/components/single_column.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column.scss
@@ -294,48 +294,50 @@
     left: 0;
     border-top: 1px #282c37 solid;
     text-align: center;
+
+    .icon-with-badge__badge {
+      -webkit-text-stroke: 0 transparent;
+    }
+
+    span {
+      display: flex;
+      flex-grow: 100;
+    }
+
+    button {
+      height: auto !important;
+      width: auto !important;
+      text-align: center;
+    }
+
+    .column-link,
+    .icon-button {
+      font-size: 2rem !important;
+      color: transparent;
+      transition:
+        color 0.2s,
+        -webkit-text-stroke 0.2s;
+      display: unset;
+      flex-grow: 100;
+      text-decoration: none;
+      -webkit-text-stroke: 1.8px var(--ui-highlight-color);
+
+      &:hover {
+        -webkit-text-stroke-color: transparent;
+        color: var(--ui-font-color);
+      }
+
+      &.active {
+        color: var(--ui-highlight-color);
+        -webkit-text-stroke: 0 transparent;
+      }
+    }
   }
 
   .ui__mobile__footer {
     display: flex;
     flex-direction: row;
     padding: 0.5rem;
-  }
-
-  .ui__mobile__footer__wrapper .column-link,
-  .ui__mobile__footer__wrapper .icon-button {
-    font-size: 2rem !important;
-    color: transparent;
-    transition:
-      color 0.2s,
-      -webkit-text-stroke 0.2s;
-    display: unset;
-    flex-grow: 100;
-    text-decoration: none;
-    -webkit-text-stroke: 1.8px var(--ui-highlight-color);
-  }
-
-  .ui__mobile__footer__wrapper .icon-with-badge__badge {
-    -webkit-text-stroke: 0 transparent;
-  }
-
-  .ui__mobile__footer__wrapper .column-link:hover,
-  .ui__mobile__footer__wrapper .icon-button:hover,
-  .ui__mobile__footer__wrapper .column-link:active,
-  .ui__mobile__footer__wrapper .icon-button:active {
-    -webkit-text-stroke-color: transparent;
-    color: var(--ui-font-color);
-  }
-
-  .ui__mobile__footer__wrapper span {
-    display: flex;
-    flex-grow: 100;
-  }
-
-  .ui__mobile__footer__wrapper button {
-    height: auto !important;
-    width: auto !important;
-    text-align: center;
   }
 
   .columns-area__panels {
