--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -40,7 +40,7 @@
     font-weight: bold;
 
     &:hover {
-      color: var(--ui-font-color);
+      color: var(--ui-highlight-button-text-color);
     }
   }
 }
