--- a/app/javascript/flavours/aether/styles/components/announcements.scss
+++ b/app/javascript/flavours/aether/styles/components/announcements.scss
@@ -158,7 +158,7 @@
       font-weight: 500;
       text-align: center;
       margin-inline-start: 6px;
-      color: var(--ui-font-dimmest-color);
+      color: var(--ui-font-color);
     }
 
     &:hover,
@@ -169,7 +169,7 @@
       transition-property: background-color, color;
       color: var(--ui-font-stark-color);
 
-      .animated-number {
+      &.animated-number {
         color: var(--ui-font-stark-color);
       }
     }
@@ -182,6 +182,14 @@
 
       .reactions-bar__item__count {
         color: var(--ui-highlight-button-text-color);
+      }
+
+      &:hover,
+      &:focus,
+      &:active {
+        &.animated-number {
+          color: var(--ui-highlight-button-text-color);
+        }
       }
     }
   }
@@ -199,6 +207,10 @@
     opacity: 0.85;
     transition: all 100ms ease-in;
     transition-property: background-color, color;
+
+    .animated-number {
+      color: var(--ui-font-dimmest-color);
+    }
 
     &:hover,
     &:active,
