--- a/app/javascript/flavours/aether/styles/components/announcements.scss
+++ b/app/javascript/flavours/aether/styles/components/announcements.scss
@@ -180,7 +180,7 @@
       color: var(--ui-highlight-button-text-color);
       background: var(--ui-highlight-color);
 
-      .reactions-bar__item__count {
+      .animated-number {
         color: var(--ui-highlight-button-text-color);
       }
 
