--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -814,7 +814,7 @@ a.status__display-name,
     align-items: center;
 
     & > div {
-      background: var(--ui-page-background);
+      background: var(--ui-body-secondary-color);
       border-radius: 8px;
       padding: 12px 9px;
       flex: 0 0 auto;
