--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -1480,7 +1480,12 @@ img.modal-warning {
 }
 
 .modal-layout {
+  /* TODO: Figure out why the vars aren't working */
   color: white;
+
+  .privacy-dropdown__dropdown {
+    background: #282c37 !important;
+  }
 
   .autosuggest-textarea__textarea {
     background: #313543 !important;
