--- a/app/javascript/flavours/aether/styles/components/drawer.scss
+++ b/app/javascript/flavours/aether/styles/components/drawer.scss
@@ -216,9 +216,10 @@
   overflow-y: auto;
   width: 100%;
   height: 100%;
+  z-index: 1;
 
   &.darker {
-    background: $ui-base-color;
+    background: var(--ui-base-color);
   }
 }
 
@@ -251,7 +252,7 @@
 }
 
 .pseudo-drawer {
-  background: lighten($ui-base-color, 13%);
+  background: var(--ui-body-color);
   font-size: 13px;
   text-align: start;
 }
