--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -25,10 +25,12 @@
   }
 }
 
-.no-reduce-motion .spoiler-input {
-  transition:
-    height 0.4s ease,
-    opacity 0.4s ease;
+@media screen and (prefers-reduced-motion: no-preference) {
+  .spoiler-input {
+    transition:
+      height 0.4s ease,
+      opacity 0.4s ease;
+  }
 }
 
 .spoiler-input {
