--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -445,16 +445,18 @@
   }
 }
 
-.no-reduce-motion .status__collapse-button {
-  &.activate {
-    & > .fa-angle-double-up {
-      animation: spring-flip-in 1s linear;
+@media screen and (prefers-reduced-motion: no-preference) {
+  .status__collapse-button {
+    &.activate {
+      & > .fa-angle-double-up {
+        animation: spring-flip-in 1s linear;
+      }
     }
-  }
 
-  &.deactivate {
-    & > .fa-angle-double-up {
-      animation: spring-flip-out 1s linear;
+    &.deactivate {
+      & > .fa-angle-double-up {
+        animation: spring-flip-out 1s linear;
+      }
     }
   }
 }
