--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -1286,6 +1286,10 @@ pre > code {
   border-radius: 4px;
 }
 
+.account__avatar-overlay-base {
+  display: block;
+}
+
 .notification-scroll {
   [data-favourited-by],
   [data-boosted-by],
