--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -714,7 +714,7 @@
   color: var(--ui-font-color);
   margin-bottom: 4px;
   display: block;
-  background-color: $base-overlay-background;
+  background-color: var(--ui-body-color);
   text-transform: uppercase;
   font-size: 11px;
   font-weight: 500;
